created controller and views for billing

--- a/app/views/car_manufacturers/index.html.haml
+++ b/app/views/car_manufacturers/index.html.haml
@@ -36,4 +36,4 @@
 %br
 
 
-= link_to 'New Car manufacturer', new_car_manufacturer_path
+= link_to 'New Car manufacturer', new_car_manufacturer_path, class: "btn btn-success"
