--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -93,4 +93,4 @@
               
 %br
 
-= link_to 'New Car', new_car_path, :class => "btn btn-primary"
+= link_to 'New Car', new_car_path, class: "btn btn-success"
