--- a/app/views/device_manufacturers/index.html.haml
+++ b/app/views/device_manufacturers/index.html.haml
@@ -36,4 +36,4 @@
 %br
 
 
-= link_to 'New Device manufacturer', new_device_manufacturer_path
+= link_to 'New Device manufacturer', new_device_manufacturer_path, class: "btn btn-success"
