--- a/app/views/device_models/index.html.haml
+++ b/app/views/device_models/index.html.haml
@@ -46,4 +46,4 @@
                 %td= link_to 'Destroy', device_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 
-= link_to 'New Device model', new_device_model_path
+= link_to 'New Device model', new_device_model_path, class: "btn btn-success"
