--- a/app/views/device_types/index.html.haml
+++ b/app/views/device_types/index.html.haml
@@ -36,4 +36,4 @@
 %br
 
 
-= link_to 'New Device type', new_device_type_path
+= link_to 'New Device type', new_device_type_path, class: "btn btn-success"
