--- a/app/views/features/index.html.haml
+++ b/app/views/features/index.html.haml
@@ -32,7 +32,7 @@
                 %td= link_to 'Edit', edit_feature_path(feature)
                 %td= link_to 'Destroy', feature, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-        = link_to 'New Feature', new_feature_path
+        = link_to 'New Feature', new_feature_path, class: "btn btn-success"
 
   
 
