--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -131,7 +131,7 @@
 							<div class="iconset top-settings-dark"></div> 	
 						</a>
 						<ul class="dropdown-menu pull-right" role="menu" aria-labelledby="user-options">
-							<li><a href="#">Normal Link</a></li>
+							<li><%= link_to "Company", company_path(current_user.company.id) %></li>
 							<li><a href="#">Badge Link&nbsp;&nbsp;<span class="badge badge-important animated bounceIn">2</span></a></li>
 							<li class="divider"></li>                
 							<li><a href=""><i class="fa fa-power-off"></i>&nbsp;&nbsp;Separated Link</a></li>
