--- a/app/views/teleproviders/index.html.haml
+++ b/app/views/teleproviders/index.html.haml
@@ -39,4 +39,4 @@
 %br
 
 
-= link_to 'New Teleprovider', new_teleprovider_path
+= link_to 'New Teleprovider', new_teleprovider_path, class: "btn btn-success"
