--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -33,4 +33,4 @@
 
 
 
-= link_to 'New Work schedule', new_work_schedule_path
+= link_to 'New Work schedule', new_work_schedule_path, class: "btn btn-success"
