--- a/app/views/alarms/index.html.haml
+++ b/app/views/alarms/index.html.haml
@@ -29,4 +29,4 @@
                 %td= link_to 'Destroy', alarm, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 
-= link_to 'New Alarm', new_alarm_path
+= link_to 'New Alarm', new_alarm_path, class: "btn btn-success"
