--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -49,4 +49,4 @@
 
 
 
-= link_to 'Invite user', new_user_invitation_path
+= link_to 'Invite user', new_user_invitation_path, class: "btn btn-success"
