--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,11 @@
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
   <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script> 
-  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag "https://bridge.paymill.com/", 'application' %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript">
+      var PAYMILL_PUBLIC_KEY = '82116769296bc2931f43f72dae901142';
+  </script>
 </head>
 <body class="error-body">
 
@@ -240,7 +243,7 @@
 					<li>
 						<a href="javascript:;"><span class="title">Billing</span><span class="arrow "></span></a>
 						<ul class="sub-menu">
-							<li><%= link_to "Plans", plans_path %></li>
+							<li><%= link_to "Plan types", plan_types_path %></li>
 	                		<li><%= link_to "Features", features_path %></li>
 						</ul>
 					</li>
