--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Signing up for the "<%= @subscription.plan.name %>" plan</h1>
+<h1>Switching to the "<%= @subscription.plan.name %>" plan</h1>
 
 <%= form_for @subscription do |f| %>
   <% if @subscription.errors.any? %>
