--- a/app/views/plans/_form.html.haml
+++ b/app/views/plans/_form.html.haml
@@ -6,5 +6,21 @@
         - @plan.errors.full_messages.each do |msg|
           %li= msg
 
+  .form-group
+    = f.label :interval, :class => "form-label"
+    = f.text_field :interval, :class => "form-control"         
+
+  .form-group
+    = f.label :price, :class => "form-label"
+    = f.text_field :price, :class => "form-control"
+
+  .form-group
+    = f.label :currency, :class => "form-label"
+    = f.text_field :currency, :class => "form-control"
+
+  .form-group
+    = f.label :plan_type_id, :class => "form-label"
+    = f.collection_select(:plan_type_id, PlanType.all, :id, :name)
+
   .actions
     = f.submit 'Save'
