implemented new signin/signup views

--- a/app/assets/stylesheets/self.css.scss
+++ b/app/assets/stylesheets/self.css.scss
@@ -28,9 +28,9 @@
 	transition: all .1s ease-in-out;
 }
 
-.body-login{
+/*.body-login{
 	background-image: image-url('work.jpg');
-}
+}*/
 
 .header .chat-toggler {
 	min-width: 190px !important;
