--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -9,9 +9,11 @@
     .tiles.grey.p-t-20.p-b-20.text-black
       %div#frm_login.animated.fadeIn
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10.errors
-          .col-md-6.col-sm-6
-            = devise_error_messages!
+        - if !resource.errors.empty?
+          .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10.errors
+            .col-md-12
+              .alert.alert-error
+                = devise_error_messages!
         .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10
           .col-md-6.col-sm-6
             = f.text_field :first_name, class: "form-control", placeholder: "First name"
@@ -19,7 +21,7 @@
             = f.text_field :last_name, class: "form-control", placeholder: "Last Name"
         .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10
           .col-md-12
-            = f.email_field :email, :class => "form-control", placeholder: "Email"
+            = f.email_field :email, :class => "form-control", placeholder: "Email address"
         .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10
           .col-md-6.col-sm-6
             = f.password_field :password, class: "form-control", placeholder: "Password"
