updated cars and devices filters view

--- a/app/assets/stylesheets/bootstrap-checkbox.css
+++ b/app/assets/stylesheets/bootstrap-checkbox.css
@@ -74,7 +74,7 @@ transition: border 0.2s linear 0s;
 }
 
 .radio input[type=radio] {
-	display: none;
+	/*display: none;*/
 }
 .radio label:before {
 	content: "";
