--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -282,8 +282,12 @@
 	<!-- BEGIN PAGE CONTAINER-->
 	<div class="page-content"> 
 		<div class="content">  
-			<p class="notice"><%= notice %></p>
+			<% if notice %>
+			<p class="alert alert-notice"><%= notice %></p>
+			<% end %>
+			<% if alert %>
 			<p class="alert"><%= alert %></p>
+			<% end %>
 			<!-- BEGIN PlACE PAGE CONTENT HERE -->
 			<%= yield %>
 			<!-- END PLACE PAGE CONTENT HERE -->
