--- a/app/views/alarms/show.html.haml
+++ b/app/views/alarms/show.html.haml
@@ -1,15 +1,19 @@
 %p#notice= notice
 
-%p
-	%b Name:
-	= @alarm.name
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h2
+          = @alarm.name
 
-%b Rules :
-%p
-	%ul
-		- @alarm.rules.each do |rule|
-			%li= rule_with_params(rule,@alarm)
+        %p          
+          %b Rules :
+        %p
+          %ul
+            - @alarm.rules.each do |rule|
+              %li= rule_with_params(rule,@alarm)
 
-= link_to 'Edit', edit_alarm_path(@alarm)
-\|
-= link_to 'Back', alarms_path
+        = link_to 'Edit', edit_alarm_path(@alarm)
+        \|
+        = link_to 'Back', alarms_path
