--- a/app/views/car_manufacturers/_form.html.haml
+++ b/app/views/car_manufacturers/_form.html.haml
@@ -1,13 +1,19 @@
-= form_for @car_manufacturer do |f|
-  - if @car_manufacturer.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@car_manufacturer.errors.count, "error")} prohibited this car_manufacturer from being saved:"
-      %ul
-        - @car_manufacturer.errors.full_messages.each do |msg|
-          %li= msg
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        = form_for @car_manufacturer do |f|
+          - if @car_manufacturer.errors.any?
+            #error_explanation
+              %h2= "#{pluralize(@car_manufacturer.errors.count, "error")} prohibited this car_manufacturer from being saved:"
+              %ul
+                - @car_manufacturer.errors.full_messages.each do |msg|
+                  %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+          .field
+            = f.label :name
+            = f.text_field :name
+          .actions
+            = f.submit 'Save'
