--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -6,24 +6,24 @@
         - @car.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :numberplate
-    = f.text_field :numberplate
+  .form-group  
+    = f.label :numberplate, class: "form-label"
+    = f.text_field :numberplate, class: "form-control"
 
-  .field
-    = f.label :mileage
-    = f.text_field :mileage
+  .form-group 
+    = f.label :mileage, class: "form-label"
+    = f.text_field :mileage, class: "form-control"
   
-  .field
-    = f.label :car_model
-    = f.collection_select(:car_model_id, CarModel.all, :id, :name)
+  .form-group
+    = f.label :car_model, class: "form-label"
+    = f.collection_select(:car_model_id, CarModel.all, :id, :name, {}, class: "form-control" )
 
-  .field
-    = f.label :car_type
-    = f.collection_select(:car_type_id, CarType.all, :id, :name)
+  .form-group
+    = f.label :car_type, class: "form-label"
+    = f.collection_select(:car_type_id, CarType.all, :id, :name, {}, class: "form-control")
   
-  .field
-    = f.label :device
+  .form-group
+    = f.label :device, class: "form-label"
     - if @car.has_device?
       = list_devices_with_default(@car.device)
     - else
@@ -32,8 +32,8 @@
       - else 
         = list_available_devices
 
-  .field
-    = f.label :driver
+  .form-group
+    = f.label :driver, class: "form-label"
     - if @car.has_driver?
       = list_drivers_with_default(@car.driver)
     - else
@@ -42,31 +42,27 @@
       - else 
         = list_available_drivers
 
-  .field
-    = f.label :registration_no
-    = f.text_field :registration_no
-  .field
-    = f.label :year
-    = f.text_field :year
-  .field
-    = f.label :color
-    = f.text_field :color
+  .form-group
+    = f.label :registration_no, class: "form-label"
+    = f.text_field :registration_no, class: "form-control"
+  .form-group
+    = f.label :year, class: "form-label"
+    = f.text_field :year, class: "form-control"
+  .form-group
+    = f.label :color, class: "form-label"
+    = f.text_field :color, class: "form-control"
 
-  .field
-    = f.label :group
-    = f.collection_select(:group_id, Group.all, :id, :name)
+  .form-group
+    = f.label :group, class: "form-label"
+    = f.collection_select(:group_id, Group.all, :id, :name, {}, class: "form-control" )
 
-  %h2 Alarms
-  = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
+  %h3 Alarms
+  .form-group
+    = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
 
-  %h2 Work Schedule
-  = f.label :work_schedule_id, "Work Schedule"
-  = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name)
+  %h3 Work Schedule
+  .form-group
+    = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name, class: "form-control")
 
-
-  %br
-  %br
-  %br
-
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
