added live map cars to home view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,4 +39,11 @@
  *= require work_schedules
  */
 
+.custom_marker_content {
+	background-color:white;
+}
+
+.custom_infowindow_content{
+	background-color:white;
+}
 
