--- a/app/views/devices/show.html.haml
+++ b/app/views/devices/show.html.haml
@@ -4,15 +4,9 @@
     .grid.simple
       .grid-title.no-border
         %h3
-          = @device.name
-        .tools
-          %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+          = Device
+          %span.semi-bold= @device.name
       .grid-body.no-border
-        %h3
-          &nbsp;
-        %p#notice= notice
         %p
           %b Emei:
           = @device.emei
