--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -37,7 +37,7 @@
             - @car_models.each do |car_model|
               %tr
                 %td= car_model.name
-                %td= car_model.car_manufacturer.name
+                %td= car_model.try(:car_manufacturer).try(:name)
                 %td= link_to 'Show', car_model
                 %td= link_to 'Edit', edit_car_model_path(car_model)
                 %td= link_to 'Destroy', car_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
